// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TickerBox renders correctly with default image source 1`] = `
<RNGestureHandlerButton
  collapsable={false}
  delayLongPress={600}
  enabled={true}
  exclusive={true}
  handlerTag={2}
  handlerType="NativeViewGestureHandler"
  onGestureEvent={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onHandlerStateChange={[Function]}
  rippleColor={0}
  touchSoundDisabled={false}
>
  <View
    accessible={true}
    collapsable={false}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#242639",
        "borderColor": "#323443",
        "borderRadius": 15,
        "borderWidth": 0.5,
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "flex-start",
        "marginTop": 10,
        "opacity": 1,
        "overflow": "hidden",
        "paddingHorizontal": 10,
        "paddingVertical": 20,
        "width": 345,
      }
    }
  >
    <Image
      source={
        {
          "uri": "https://picsum.photos/200",
        }
      }
      style={
        {
          "borderRadius": 50,
          "height": 50,
          "width": 50,
        }
      }
    />
    <Text
      numberOfLines={2}
      style={
        {
          "color": "#fcfcfc",
          "fontWeight": "700",
          "marginVertical": 10,
          "textAlign": "center",
        }
      }
    >
      SN
    </Text>
    <Text
      numberOfLines={2}
      style={
        {
          "color": "#abacb3",
          "fontSize": 15,
          "textAlign": "center",
          "width": 100,
        }
      }
    >
      Stock Name
    </Text>
  </View>
</RNGestureHandlerButton>
`;

exports[`TickerBox renders correctly with given props 1`] = `
<RNGestureHandlerButton
  collapsable={false}
  delayLongPress={600}
  enabled={true}
  exclusive={true}
  handlerTag={1}
  handlerType="NativeViewGestureHandler"
  onGestureEvent={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onHandlerStateChange={[Function]}
  rippleColor={0}
  touchSoundDisabled={false}
>
  <View
    accessible={true}
    collapsable={false}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#242639",
        "borderColor": "#323443",
        "borderRadius": 15,
        "borderWidth": 0.5,
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "flex-start",
        "marginTop": 10,
        "opacity": 1,
        "overflow": "hidden",
        "paddingHorizontal": 10,
        "paddingVertical": 20,
        "width": 345,
      }
    }
  >
    <Image
      source={
        {
          "uri": "https://picsum.photos/200",
        }
      }
      style={
        {
          "borderRadius": 50,
          "height": 50,
          "width": 50,
        }
      }
    />
    <Text
      numberOfLines={2}
      style={
        {
          "color": "#fcfcfc",
          "fontWeight": "700",
          "marginVertical": 10,
          "textAlign": "center",
        }
      }
    >
      SN
    </Text>
    <Text
      numberOfLines={2}
      style={
        {
          "color": "#abacb3",
          "fontSize": 15,
          "textAlign": "center",
          "width": 100,
        }
      }
    >
      Stock Name
    </Text>
  </View>
</RNGestureHandlerButton>
`;
